--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@1,400;1,500;1,600;1,700;1,800&family=Quicksand:wght@300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,400;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 body {
-    background-color: #f1f5f9;
+    background-color: #ffffff;
+    color: #000000;
 }
 
 body.dark {
-    background-color: #0f172a;
+    background-color: #000000;
+    color: #ffffff;
+}
+
+hr {
+    border: none;
+    height: 16px;
+    /* Set the hr color */
+    color: #333; /* old IE */
+    background-color: #333; /* Modern Browsers */
 }
